syntax = "proto3"; // 指定proto版本

import "example.proto"; // 需要在IDE "设置 -> 语言和框架 -> Protocol Buffers" 中添加proto文件所在目录

package ProtoTest; // 指定命名空间

// 可嵌套
message TestMessage {// Level 0

    reserved 1, 3 to 5;
    reserved "testEnum";

    TestRequest request = 2;
    TestResponse response = 6;

    message TestMessage1 {// Level 1

        reserved 2;

        TestRequest request = 1;
        TestResponse response = 3;

        enum TestEnum1 {
            BEGIN = 0;
            END = 1;
        }


        message TestMessage3 {// Level 2
            TestRequest request = 1;
            TestResponse response = 2;

            TestEnum1 testEnum = 3;
        }
    }

    message TestMessage2 {// Level 1
        TestRequest request = 1;
        TestResponse response = 2;
    }
}